# SimpleCoverage

./: .gitignore  README.md  pyproject.toml  sc_class.py  scmap.py  scrun.py
test/: demo_input.fasta  demo_targets.fasta
